opam-version: "2.0"
maintainer: "mlin@mlin.net"
authors: ["Mike Lin"]
homepage: "https://github.com/mlin/should.ml"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "ocaml" {< "4.06.0"}
  "dune" {>= "1.11"}
]
dev-repo: "git://github.com/mlin/should.ml"
bug-reports: "https://github.com/mlin/should.ml/issues"
synopsis: "Literate assertions"
description: "Write assertions in in (roughly) plain English"
